--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,11 @@ table {
   border: 1px solid;
  
  }
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
